estilizando el butom

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,5 @@
 @import "./index.css";
 @import "./contacto.css";
 @import "./inicio.css";
-@import "./acerca.css"
+@import "./acerca.css";
+@import "./comprar.css"
